Updating comments to better indicate source of code and my own contributions

--- a/weather/templates/weather/index.html
+++ b/weather/templates/weather/index.html
@@ -1,3 +1,9 @@
+<!--This file created as part of a tutorial from
+https://scotch.io/tutorials/building-a-weather-app-in-django
+by Anthony Herbert
+
+Modifications by Wayman Bell --!>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -53,8 +59,7 @@
                             <div class="media-content">
                                 <div class="content">
                                     <p>
-                                        <!-- <span class="title">{{ weather.city }}</span>
-                                            Changed because the field was being populated with
+                                        <!--weather.city changed because the field was populating with
                                             "City Object <1>" or something of the like.  It was
                                             additionally displaying poorly on landing page.--!>
                                         <span class="title">{{ weather.city.name }}</span>
